--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,10 @@
   		<artifactId>javax.servlet-api</artifactId>
   		<version>3.0.1</version>
   	</dependency>
+    <dependency>
+            <groupId>org.sonatype.plexus</groupId>
+            <artifactId>plexus-cipher</artifactId>
+            <version>1.4</version>
+          </dependency>
   </dependencies>
 </project>
